Resolve "Start date, end date, etc. as timestamp instead of date"
