# src/utils/Validators.ts
@@ -9,64 +9,70 @@ class Validators {
      * PUT /user
      */
     userChangeInformationValidationRules = [
-        body("old_password").exists()
+        body("old_password").exists().isString().isLength({min: 1})
     ];
 
     /**
      * POST /user
      */
     userRegisterValidationRules = [
-        body("username").exists(),
-        body("password").exists(),
-        body("email").exists()
+        body("username").exists().isString().isLength({min: 1}),
+        body("password").exists().isString().isLength({min: 6}),
+        body("email").exists().isEmail()
     ];
 
     /**
      * DELETE /user
      */
     userDeleteValidationRules = [
-        body("password").exists()
+        body("password").exists().isString().isLength({min: 1})
     ];
 
     /**
      * POST /user/login
      */
     userLoginValidationRules = [
-        body("username").exists(),
-        body("password").exists()
+        body("username").exists().isString().isLength({min: 1}),
+        body("password").exists().isString().isLength({min: 1})
     ];
 
     /**
      * POST /user/password/reset
      */
     userResetForgottenPasswordValidationRules = [
-        body("reset_password_token").exists(),
-        body("new_password").exists()
+        body("reset_password_token").exists().isString().isLength({min: 1}),
+        body("new_password").exists().isString().isLength({min: 6})
     ];
 
     /**
      * POST /survey
      */
-    createSurveyValidationRules = [
-        body("title").exists(),
-        body("description").exists(),
+    surveyCreateValidationRules = [
+        body("title").exists().isString().isLength({min: 1}),
+        body("description").exists().isString().isLength({min: 1}),
         body("secured").exists().isBoolean(),
+        body("start_date").optional().isNumeric(),
+        body("end_date").optional().isNumeric(),
         body("constrained_questions").exists().isArray(),
-        body("constrained_questions.*.question_text").exists(),
-        body("constrained_questions.*.position").exists(),
-        body("constrained_questions.*.options").exists(),
+        body("constrained_questions.*.question_text").exists().isString().isLength({min: 1}),
+        body("constrained_questions.*.position").exists().isNumeric(),
         body("constrained_questions.*.options").exists().isArray().isLength({min: 2}),
-        body("constrained_questions.*.options.*.answer").exists(),
+        body("constrained_questions.*.options.*.answer").exists().isString().isLength({min: 1}),
         body("constrained_questions.*.options.*.position").exists().isNumeric(),
         body("freestyle_questions").exists().isArray(),
-        body("freestyle_questions.*.question_text").exists(),
+        body("freestyle_questions.*.question_text").exists().isString().isLength({min: 1}),
         body("freestyle_questions.*.position").exists().isNumeric()
     ];
 
     /**
      * PUT /survey
      */
-    updateSurveyValidationRules = [
+    surveyUpdateValidationRules = [
+        body("title").optional().isString().isLength({min: 1}),
+        body("description").optional().isString().isLength({min: 1}),
+        body("secured").optional().isBoolean(),
+        body("start_date").optional().isNumeric(),
+        body("end_date").optional().isNumeric(),
         body("added_constrained_questions").exists().isArray(),
         body("added_constrained_questions.*.question_text").exists(),
         body("added_constrained_questions.*.position").exists(),
@@ -85,14 +91,14 @@ class Validators {
     /**
      * GET /token
      */
-    retrieveTokensValidationRules = [
+    tokenRetrieveValidationRules = [
         query("survey_id").exists()
     ];
 
     /**
      * POST /token
      */
-    createTokenValidationRules = [
+    tokenCreateValidationRules = [
         body("amount").exists().isNumeric(),
         body("survey_id").exists()
     ];
@@ -100,7 +106,7 @@ class Validators {
     /**
      * POST /token/email
      */
-    createTokenAndSendEmailValidationRules = [
+    tokenCreateAndSendEmailValidationRules = [
         body("survey_id").exists(),
         body("emails").exists().isArray(),
         body("emails.*").exists().isEmail()
@@ -109,7 +115,7 @@ class Validators {
     /**
      * POST /submission
      */
-    createSubmissionValidationRules = [
+    submissionCreateValidationRules = [
         body("survey_id").exists(),
         body("constrained_answers").exists().isArray(),
         body("freestyle_answers").exists().isArray(),
@@ -122,7 +128,7 @@ class Validators {
     /**
      * GET /submission
      */
-    getSubmissionValidationRules = [
+    submissionGetValidationRules = [
         query("survey_id").exists()
     ];
 
